# zed-gleam

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  extension.toml
languages/gleam/: config.toml  highlights.scm  injections.scm
snippets/: gleam.json
src/: gleam.rs
