[package]
name = "zed_gleam"
version = "0.5.1"
edition = "2021"
publish = false
license = "Apache-2.0"

[lib]
path = "src/gleam.rs"
crate-type = ["cdylib"]

[dependencies]
html_to_markdown = "0.1.0"
zed_extension_api = "0.1.0"

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true # Ensures debug symbols are removed.

